--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -4,7 +4,7 @@
         {% include 'head.html' %}
         <title>{% block title %}{% endblock %}</title>
     </head>
-    <body class="overflow-hidden" data-bs-theme="dark">
+    <body data-bs-theme="dark">
         {% block content %}{% endblock %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
