added template of panel

--- a/server/templates/login.html
+++ b/server/templates/login.html
@@ -10,15 +10,15 @@
         </h1>
         <form action="/login" method="post">
             <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" name="username" aria-describedby="username">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" name="password">
             </div>
             <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="remember">
+                <input type="checkbox" class="form-check-input" name="remember">
                 <label class="form-check-label" for="remember">Remember me</label>
             </div>
             <button type="submit" class="btn btn-outline-light">Submit</button>
